initial loading page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>HERE</h1>
+<div class="header">
+    <i class="fa fa-apple"></i>
+</div>
+
+<div class="container">
+  <img src="assets/images/apple-logo.png" alt="">
+
+  <h4>New Products Coming This Summer</h4>
+  <h2>2019</h2>
+</div>
+
