added register/login routes and styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-<div class="header">
-    <i class="fa fa-apple"></i>
-</div>
 
-<div class="container">
-  <img src="assets/images/apple-logo.png" alt="">
 
-  <h4>New Products Coming This Summer</h4>
-  <h2>2019</h2>
-</div>
+ <a [routerLink]="['/login']">Login</a>
+ <a [routerLink]="['/register']">Register</a>
 
+ <a [routerLink]="['/home']">Home</a>
+
+
+ <router-outlet></router-outlet>
