--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="login">
+    <h2>Login</h2>
     <label for="username">Username</label>
     <input type="text" name="username" [(ngModel)]="username">
 
