auth guards now in place, logout logic in place

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -10,3 +10,8 @@
 
   <button class="submit" (click)="submit()">SUBMIT</button>
 </div>
+
+<div class="login">
+    <p>Already have an account? Login <a [routerLink]="['/login']">Here</a>
+    </p>
+</div>
