--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 
-
+<!-- 
  <a [routerLink]="['/login']">Login</a>
- <a [routerLink]="['/register']">Register</a>
 
- <a [routerLink]="['/home']">Home</a>
+ <a [routerLink]="['/home']">Home</a> -->
 
 
  <router-outlet></router-outlet>
