--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -18,6 +18,7 @@
 }
 .container img{
     z-index: -1;
+    margin-top: 6em;
 }
 .container h4 {
     z-index:10;
@@ -26,4 +27,16 @@
 .container h2 {
     margin-top: 6em;
     letter-spacing: 0.5em;
+}
+
+.logout{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 3em;
+    margin-right: 1em;
+}
+
+.logout a{
+    text-decoration: underline;
+    cursor: pointer;
 }
