--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,9 +2,14 @@
   <i class="fa fa-apple"></i>
 </div>
 
-<div class="container">
+<div class="container" [routerLink]="['/register']" >
   <img src="assets/images/apple-logo.png" alt="" />
 
   <h4>New Products Coming This Summer</h4>
   <h2>2019</h2>
+
+</div>
+
+<div class="logout">
+  <a (click)="logout()">logout</a>
 </div>
