--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,4 @@
-.login{
+.login .form{
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -8,6 +8,7 @@
     border: 1px solid #000;
     border-radius: 4px;
     padding: 2em;
+    margin-top:5em;
 }
 .login h2{
     margin: 0;
@@ -23,4 +24,7 @@
 }
 .submit{
     margin: 1em 6em;
+}
+.register{
+    text-align: center;
 }
