--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,16 +1,23 @@
 <div class="login">
-    <form role="form" [formGroup]="form">
-        <h2>Login</h2>
-        <div class="form-field">
-            <label for="username">Username</label>
-            <input type="text" name="username" formControlName="username">
-        </div>
+  <form role="form" [formGroup]="form" class="form">
+    <h2>Login</h2>
 
-        <div class="form-field">
-            <label for="password">Password</label>
-            <input type="password" name="password" formControlName="password">
-        </div>  
-        <button class="submit" (click)="submit()">SUBMIT</button>
-    </form>
-  
+    <div class="login">
+      <div class="form-field">
+        <label style="display:block;" for="username">Username</label>
+        <input style="width:100%;"type="text" name="username" formControlName="username" />
+      </div>
+
+      <div class="form-field">
+        <label style="display:block;"  for="password">Password</label>
+        <input style="width:100%;"type="password" name="password" formControlName="password" />
+      </div>
+    </div>
+    <button class="submit" (click)="submit()">SUBMIT</button>
+  </form>
+</div>
+
+<div class="register">
+    <p>Don't have an account? Register <a [routerLink]="['/register']">Here</a>
+    </p>
 </div>
