--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -8,6 +8,7 @@
     border: 1px solid #000;
     border-radius: 4px;
     padding: 2em;
+    margin-top:5em;
 }
 .register h2{
     margin: 0;
@@ -23,4 +24,7 @@
 }
 .submit{
     margin: 1em 6em;
+}
+.login{
+    text-align: center;
 }
