making products page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
   <i class="fa fa-apple"></i>
 </div>
 
-<div class="container" [routerLink]="['/register']" >
+<div class="container" [routerLink]="['/products']" >
   <img src="assets/images/apple-logo.png" alt="" />
 
-  <h4>New Products Coming This Summer</h4>
+  <h4>New Products Coming This Fall</h4>
   <h2>2019</h2>
 
 </div>
