added home button to products page

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <div class="logo">
+    <div class="logo" [routerLink]="['/home']" style="cursor:pointer;">
         <i class="fa fa-apple"></i>
     </div>
 
