--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <i class="fa fa-apple"></i>
 </div>
 
-<div class="container" [routerLink]="['/products']" >
+<div class="container" [routerLink]="['/products']" style="cursor:pointer;">
   <img src="assets/images/apple-logo.png" alt="" />
 
   <h4>New Products Coming This Fall</h4>
