added firebase deployment, fixed css

--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -23,7 +23,8 @@
     border-radius: 3px;
 }
 .submit{
-    margin: 1em 6em;
+    margin: 1em 13em;
+    height: 2em;
 }
 .login{
     text-align: center;
