--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -12,7 +12,7 @@
     margin-top: 1em;
 }
 .header .nav-bar {
-    margin-left: 22em;
+    margin-left: auto;
     font-size: 12px;
     color: gray;
    margin-top: 1em;
