--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,12 @@
 <div class="header">
-  <i class="fa fa-apple"></i>
+  <div></div>
+  <div>
+    <i class="fa fa-apple"></i>
+
+  </div>
+  <div class="logout">
+      <a (click)="logout()">logout</a>
+    </div>
 </div>
 
 <div class="container" [routerLink]="['/products']" style="cursor:pointer;">
@@ -10,6 +17,3 @@
 
 </div>
 
-<div class="logout">
-  <a (click)="logout()">logout</a>
-</div>
