--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -12,8 +12,9 @@
 
 </div>
 
-<div class="container">
+<div class="container" id="container">
     <img src="assets/images/apple-logo.png" alt="" />
+    <button (click)="addMargin()"></button>
   
     <h1>Welcome To Apple</h1>
     <h4>See our Products</h4>
