--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -12,7 +12,7 @@
 
 </div>
 
-<div class="container" id="container">
+<div class="container" id="container" [@changeDivSize]=currentState>
     <img src="assets/images/apple-logo.png" alt="" />
     <button (click)="addMargin()"></button>
   
