--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -4,11 +4,14 @@
     flex-direction: column;
     margin: 0 auto;
     background: #f7f7f7;
-    height:auto;
-    border: 1px solid #000;
+    height: auto;
+    border: 1px solid #cfcfcf;
     border-radius: 4px;
     padding: 2em;
     margin-top:5em;
+    -webkit-box-shadow: 0px 10px 34px -5px rgba(0,0,0,0.63);
+    -moz-box-shadow: 0px 10px 34px -5px rgba(0,0,0,0.63);
+    box-shadow: 0px 10px 34px -5px rgba(0,0,0,0.63);
 }
 .register h2{
     margin: 0;
@@ -23,7 +26,13 @@
     border-radius: 3px;
 }
 .submit{
-    margin: 1em 13em;
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 1em;
+    border-radius: 5px;
+    border: none;
+    background: #00adff;
+    color: #fff;
     height: 2em;
 }
 .login{
