adding some animations

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -33,7 +33,8 @@
     border: none;
     background: #00adff;
     color: #fff;
-    height: 2em;
+    height: 2.5em;
+    cursor: pointer;
 }
 .register{
     text-align: center;
